# era-compiler-solidity

./: .gitignore  .gitignore.bak  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  codecov.yml  deny.toml  rust-toolchain.toml  versions.json
era-compiler-solidity/: Cargo.toml  build.rs
era-compiler-solidity/.cargo/: config.toml
era-compiler-solidity/cli-tests/tests/: eravm-assembly.test.ts  standard-json.test.ts
era-compiler-solidity/src/: const.rs  error_type.rs  lib.rs  libraries.rs  message_type.rs  missing_libraries.rs  warning_type.rs
era-compiler-solidity/src/build_eravm/: contract.rs  mod.rs
era-compiler-solidity/src/build_eravm/contract/: mod.rs  object_format.rs
era-compiler-solidity/src/build_evm/: contract.rs  mod.rs
era-compiler-solidity/src/build_evm/contract/: deploy_build.rs  mod.rs  object.rs  runtime_build.rs
era-compiler-solidity/src/evmla/assembly/: data.rs  mod.rs
era-compiler-solidity/src/evmla/ethereal_ir/: entry_link.rs  mod.rs
era-compiler-solidity/src/libraries/: mod.rs
era-compiler-solidity/src/linker/: input.rs  mod.rs  output.rs
era-compiler-solidity/src/linker/output/: contract.rs  ignored.rs  linked.rs  mod.rs  unlinked.rs
era-compiler-solidity/src/process/: input_eravm.rs  input_evm.rs  mod.rs  output_eravm.rs
era-compiler-solidity/src/process/input_eravm/: dependency_data.rs  mod.rs
era-compiler-solidity/src/process/input_evm/: dependency_data.rs  mod.rs
era-compiler-solidity/src/project/: mod.rs  thread_pool_eravm.rs  thread_pool_evm.rs
era-compiler-solidity/src/project/contract/: metadata.rs  mod.rs
era-compiler-solidity/src/solc/: codegen.rs  mod.rs  version.rs
era-compiler-solidity/src/solc/combined_json/: contract.rs  mod.rs
era-compiler-solidity/src/tests/: ir_artifacts.rs  libraries.rs  optimizer.rs  standard_json.rs  unsupported_instructions.rs
era-compiler-solidity/src/yul/: mod.rs
era-compiler-solidity/src/yul/lexer/: error.rs  mod.rs
era-compiler-solidity/src/yul/parser/: identifier.rs  mod.rs  type.rs  wrapper.rs
era-compiler-solidity/src/zksolc/: arguments.rs  main.rs
era-compiler-solidity/tests/: cli_combined_json.rs  cli_disassembler.rs  cli_eravm_assembly.rs  cli_libraries.rs  cli_llvm_ir.rs  cli_metadata_hash.rs  cli_missing_lib.rs  cli_optimization.rs  cli_output_dir.rs  cli_solc.rs  cli_standard_json.rs  cli_tests.rs  common.rs  ir_artifacts.rs  libraries.rs  messages.rs  regression_tests.rs  remappings.rs  solc-bin-upstream.json  solc-bin.json  standard_json.rs  test_cli.rs  test_unit.rs
era-compiler-solidity/tests/cli/: allow_paths.rs  asm.rs  base_path.rs  basic.rs  bin.rs  codegen.rs  combined_json.rs  debug_output_dir.rs  detect_missing_libraries.rs  disable_solc_optimizer.rs  disassemble.rs  disassembler.rs  enable_eravm_extensions.rs  eravm_assembly.rs  eravm_extensions.rs  evm_version.rs  fallback_oz.rs  force_evmla.rs  general.rs  include_path.rs  libraries.rs  link.rs  linker.rs  llvm_ir.rs  llvm_options.rs  metadata.rs  metadata_hash.rs  metadata_literal.rs  missing_lib.rs  mod.rs  no_cbor_metadata.rs  optimization.rs  output_dir.rs  overwrite.rs  recursive_process.rs  remappings.rs  solc.rs  standard_json.rs  suppress_errors.rs  suppress_warnings.rs  (+4 more)
era-compiler-solidity/tests/cli/eravm/: detect_missing_libraries.rs  disassemble.rs  enable_eravm_extensions.rs  eravm_assembly.rs  link.rs  llvm_ir.rs  missing_lib.rs  mod.rs  output_dir.rs  standard_json.rs  suppress_errors.rs  suppress_warnings.rs  yul.rs
era-compiler-solidity/tests/cli/evm/: llvm_ir.rs  mod.rs
era-compiler-solidity/tests/cli_tests/: mod.rs
era-compiler-solidity/tests/common/: const.rs  mod.rs
era-compiler-solidity/tests/data/: broken.bad
era-compiler-solidity/tests/data/bytecodes/: disassembler.hex  linker.hex  linker.zbin  linker_error.zbin
era-compiler-solidity/tests/data/standard_json_input/: eravm_assembly_urls.json  eravm_assembly_urls_invalid.json  eravm_assembly_urls_missing.json  eravm_assembly_urls_missing_file.json  invalid_utf8.json  keccak256_deprecated.json  llvm_ir_urls.json  llvm_ir_urls_invalid.json  llvm_ir_urls_missing.json  llvm_ir_urls_missing_file.json  metadata_hash_ipfs_and_metadata.json  metadata_hash_ipfs_no_metadata.json  metadata_hash_none_and_metadata.json  no_cbor_metadata.json  (+29 more)
era-compiler-solidity/tests/examples/: Test.yul
era-compiler-solidity/tests/regression/: factory_dependency.rs  libraries.rs  linker.rs  messages.rs  mod.rs
era-compiler-solidity/tests/scripts/: solc_exit_code_failed.bat  solc_exit_code_failed.sh  solc_invalid_output_json.bat  solc_invalid_output_json.sh  solc_version_not_enough_lines.bat  solc_version_not_enough_lines.sh  solc_version_not_enough_words_in_2nd_line.bat  solc_version_not_enough_words_in_2nd_line.sh  solc_version_output_error.bat  solc_version_parsing_error.bat  solc_version_parsing_error.sh  solc_version_too_new.bat  solc_version_too_new.sh  solc_version_too_old.bat  solc_version_too_old.sh  solc_version_zksync_revision_missing_revision.bat  solc_version_zksync_revision_missing_revision.sh  solc_version_zksync_revision_missing_version.bat  solc_version_zksync_revision_missing_version.sh  solc_version_zksync_revision_parsing_revision_error.bat  solc_version_zksync_revision_parsing_revision_error.sh
era-compiler-solidity/tests/unit/: combined_json.rs  factory_dependency.rs  ir_artifacts.rs  libraries.rs  linker.rs  messages.rs  mod.rs  optimizer.rs  remappings.rs  standard_json.rs  unsupported_instructions.rs
era-solc/: Cargo.toml
era-solc/src/: lib.rs  solc.rs  version.rs
era-solc/src/combined_json/: contract.rs  mod.rs  selector.rs
era-yul/: Cargo.toml  README.md
era-yul/src/: lib.rs
era-yul/src/util/: counter.rs  iter.rs  mod.rs
era-yul/src/yul/: dependencies.rs  mod.rs  printer.rs
era-yul/tests/: printer.rs
yul-syntax-tools/: Cargo.toml  README.md  SECURITY.md
yul-syntax-tools/.cargo/: config.toml
yul-syntax-tools/src/: message_type.rs
yul-syntax-tools/src/util/: mod.rs
yul-syntax-tools/src/yul/: mod.rs  printer.rs
yul-syntax-tools/tests/: printer.rs
(+650 files in other folders)
