[package]
name = "compiler-solidity"
version = "1.3.14"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "The zkEVM Solidity compiler"

[[bin]]
name = "zksolc"
path = "src/zksolc/main.rs"

[lib]
doctest = false

[dependencies]
structopt = { version = "0.3", default-features = false }
colored = "2.0"
thiserror = "1.0"
anyhow = "1.0"

rayon = "1.7"

serde = { version = "1.0", "features" = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision", "unbounded_depth" ] }
serde_stacker = "0.1"
once_cell = "1.17"
rand = "0.8"
regex = "1.8"
semver = { version = "1.0", features = [ "serde" ] }
hex = "0.4"
num = "0.4"
sha3 = "0.10"
md5 = "0.7"
which = "4.4"

zkevm-assembly = { git = "https://github.com/matter-labs/era-zkEVM-assembly", branch = "v1.3.2" }

compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }
compiler-llvm-context = { git = "https://github.com/matter-labs/era-compiler-llvm-context", branch = "main" }

[dependencies.inkwell]
git = "https://github.com/matter-labs-forks/inkwell"
branch = "llvm-15"
default-features = false
features = ["llvm15-0", "no-libffi-linking", "target-syncvm"]

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "*", default-features = false }
