[package]
name = "era-compiler-solidity"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
description = "Solidity compiler for ZKsync"
links = "compiler-rt-zksolc"

[[bin]]
name = "zksolc"
path = "src/zksolc/main.rs"

[lib]
doctest = false

[dependencies]
structopt = { version = "=0.3.26", default-features = false }
thiserror = "=1.0.64"
anyhow = "=1.0.89"
boolinator = "=2.4.0"
which = "=6.0.3"
path-slash = "=0.2.1"
normpath = "=1.3.0"
rayon = "=1.10.0"
rusty_pool = { version = "=0.7.0", default-features = false }
num_cpus = "=1.16.0"

serde = { version = "=1.0.210", "features" = [ "derive" ] }
serde_json = { version = "=1.0.128", features = [ "arbitrary_precision" ] }
semver = { version = "=1.0.23", features = [ "serde" ] }
rand = "=0.8.5"
regex = "=1.11.0"
hex = "=0.4.3"
num = "=0.4.3"
sha3 = "=0.10.8"

zkevm_opcode_defs = "=0.150.6"

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }
era-compiler-llvm-context = { git = "https://github.com/matter-labs/era-compiler-llvm-context", branch = "main" }
era-yul = { path = "../era-yul" }

[dev-dependencies]
assert_cmd = "=2.0.16"
predicates = "=3.1.2"
tempfile = "=3.12.0"
test-case = "=3.3.1"
reqwest = { version = "=0.11.27", features = ["blocking", "json"] }
era-compiler-downloader = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }

[dependencies.inkwell]
git = "https://github.com/matter-labs-forks/inkwell"
branch = "llvm-17"
default-features = false
features = ["llvm17-0", "no-libffi-linking", "target-eravm", "target-evm"]

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "=0.1.43", default-features = false }
