[package]
name = "era-compiler-solidity"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
description = "Solidity compiler for ZKsync"
links = "compiler-rt-zksolc"

[[bin]]
name = "zksolc"
path = "src/zksolc/main.rs"

[lib]
doctest = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
path-slash = "0.2"
normpath = "1.3"
rayon = "1.10"

serde = { version = "1.0", "features" = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
semver = { version = "1.0", features = [ "serde" ] }
hex = "0.4"
num = "0.4"

zkevm_opcode_defs = "=0.150.6"

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }
era-compiler-llvm-context = { git = "https://github.com/matter-labs/era-compiler-llvm-context", branch = "main" }
era-solc = { path = "../era-solc" }
era-yul = { path = "../era-yul" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.19"
test-case = "3.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }

era-compiler-downloader = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }

[dependencies.inkwell]
git = "https://github.com/matter-labs-forks/inkwell"
branch = "llvm-17"
default-features = false
features = ["llvm17-0", "no-libffi-linking", "target-eravm", "target-evm"]
