[package]
name = "era-solc"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
description = "solc client for the ZKsync compilers"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
boolinator = "2.4"
which = "7.0"
rayon = "1.10"

serde = { version = "1.0", "features" = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
semver = { version = "1.0", features = [ "serde" ] }
hex = "0.4"
num = "0.4"

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }