[package]
name = "era-yul"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
description = "Yul lexer and parser used by the ZKsync compilers"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
thiserror = "2.0"

serde = { version = "1.0", "features" = [ "derive" ] }
regex = "1.11"
