[package]
name = "yul-syntax-tools"
version = "1.5.2"
authors = [
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
    "Igor Zhirkov <iz@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "YUL parser, syntax analysis and manipulation tools."

[lib]
doctest = false

[dependencies]
thiserror = "1.0"
anyhow = "1.0"

serde = { version = "1.0", "features" = [ "derive" ] }
regex = "1.10"
