[package]
name = "yul-syntax-tools"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
description = "YUL parser, syntax analysis and manipulation tools."

[lib]
doctest = false

[dependencies]
thiserror = "1.0"
anyhow = "1.0"

serde = { version = "1.0", "features" = [ "derive" ] }
regex = "1.10"
